--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portflio-index",
-  "homepage": "https://c2838.github.io/portflio-index",
+  "homepage": "https://c2838.github.io/portfolio-index",
   "private": true,
   "version": "0.0.0",
   "type": "module",
