--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portflio-index",
+  "name": "portfolio-index",
   "homepage": "https://c2838.github.io/portfolio-index",
   "private": true,
   "version": "0.0.0",
